--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,6 @@ test:
   timeout: 5000
 
 production:
-  adapter: mysql2
-  database: ror_commerce_production
+  adapter: postgresql
+  encoding: unicode
   pool: 5
-  timeout: 5000
