--- a/config/config.yml
+++ b/config/config.yml
@@ -47,8 +47,10 @@ test:
 
 # Production configs
 production:
-  secret_key_base: <%= ENV['SECRET_KEY_BASE'] %>
-  devise_secret_key: <%= ENV['DEVISE_KEY'] %>
+  #secret_key_base: <%= ENV['SECRET_KEY_BASE'] %>
+  #devise_secret_key: <%= ENV['DEVISE_KEY'] %>
+  secret_key_base: 2X86ZBF4g5MzIc4RGH45GAFOI913CGA9
+  devise_secret_key: J4963lIx239zOKftAg97akKiDIrny5ft
 
   sms_notifier:
     enabled: false
